force-app/main/default/objects/RecruitmentPlanLine__c/RecruitmentPlanLine__c.object-meta.xml
<CustomObject>
    <label>Recruitment Plan Line</label>
    <nameField>
        <label>Recruitment Plan Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Plan Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>