force-app/main/default/objects/RecruitmentPlanLine__c/fields/AdditionalRequirements__c.field-meta.xml
<CustomField>
    <fullName>AdditionalRequirements__c</fullName>
    <label>Additional Requirements</label>
    <type>TextArea</type>
</CustomField>