force-app/main/default/objects/RecruitmentPlanLine__c/fields/FirstDateofMonth__c.field-meta.xml
<CustomField>
    <fullName>FirstDateofMonth__c</fullName>
    <formula>DATE(   VALUE(RecruitmentPlan__r.Year__c)  ,
  VALUE(CASE( TEXT( Month__c ) , 
&quot;January&quot;, &quot;01&quot;, 
&quot;February&quot;, &apos;02&apos;, 
&quot;March&quot;, &apos;03&apos;, 
&quot;April&quot;, &apos;04&apos;,
&quot;May&quot;, &apos;05&apos;, 
&quot;June&quot;, &apos;06&apos;, 
&quot;July&quot;, &apos;07&apos;, 
&quot;August&quot;, &apos;08&apos;, 
&quot;September&quot;, &apos;09&apos;, 
&quot;October&quot;, &apos;10&apos;, 
&quot;November&quot;, &apos;11&apos;, 
&quot;December&quot;,&apos;12&apos;,&apos;&apos;))  
,01)</formula>
    <label>First Date of Month</label>
    <type>Date</type>
</CustomField>