force-app/main/default/objects/RecruitmentPlanLine__c/fields/JobDescription__c.field-meta.xml
<CustomField>
    <fullName>JobDescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Description</label>
    <referenceTo>JobDescription__c</referenceTo>
    <relationshipLabel>Recruitment Plan Line</relationshipLabel>
    <relationshipName>Recruitment_Plan_Line</relationshipName>
    <type>Lookup</type>
</CustomField>