force-app/main/default/objects/RecruitmentPlanLine__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Recruitment Plan Line</relationshipLabel>
    <relationshipName>Recruitment_Plan_Line</relationshipName>
    <type>Lookup</type>
</CustomField>