force-app/main/default/objects/RecruitmentPlanLine__c/fields/PositionNameFor__c.field-meta.xml
<CustomField>
    <fullName>PositionNameFor__c</fullName>
    <formula>Position__r.Name</formula>
    <label>Position Name For</label>
    <type>Text</type>
</CustomField>