force-app/main/default/objects/RecruitmentPlanLine__c/fields/Quarter_of_Year__c.field-meta.xml
<CustomField>
    <fullName>Quarter_of_Year__c</fullName>
    <formula>CEILING( MONTH (  ClosingDate__c  ) / 3 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter of Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>