force-app/main/default/objects/RecruitmentPlanLine__c/fields/ReasonofChange__c.field-meta.xml
<CustomField>
    <fullName>ReasonofChange__c</fullName>
    <label>Reason of Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>