force-app/main/default/objects/RecruitmentPlanLine__c/fields/ReasonofReject__c.field-meta.xml
<CustomField>
    <fullName>ReasonofReject__c</fullName>
    <label>Reason of Reject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>