force-app/main/default/objects/RecruitmentPlanLine__c/fields/RecruitmentPlan__c.field-meta.xml
<CustomField>
    <fullName>RecruitmentPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Plan</label>
    <referenceTo>RecruitmentPlan__c</referenceTo>
    <relationshipLabel>Recruitment Plan Line</relationshipLabel>
    <relationshipName>Recruitment_Plan_Line</relationshipName>
    <type>Lookup</type>
</CustomField>