force-app/main/default/objects/RecruitmentPlanLine__c/fields/RecruitmentStatus__c.field-meta.xml
<CustomField>
    <fullName>RecruitmentStatus__c</fullName>
    <defaultValue>&apos;Planned&apos;</defaultValue>
    <label>Recruitment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>