force-app/main/default/objects/RecruitmentPlanLine__c/fields/RecruitmentTime__c.field-meta.xml
<CustomField>
    <fullName>RecruitmentTime__c</fullName>
    <label>Recruitment Time</label>
    <type>Date</type>
</CustomField>