force-app/main/default/objects/RecruitmentPlanLine__c/fields/Week_of_year__c.field-meta.xml
<CustomField>
    <fullName>Week_of_year__c</fullName>
    <formula>IF( 
  CEILING( (  ClosingDate__c - DATE( YEAR( ClosingDate__c), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( ClosingDate__c- DATE( YEAR( ClosingDate__c), 1, 1) + 1) / 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week of year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>