force-app/main/default/objects/RecruitmentPlanLine__c/fields/Weekly_frame__c.field-meta.xml
<CustomField>
    <fullName>Weekly_frame__c</fullName>
    <formula>Text (DATE(YEAR(TODAY()), 1, 1) + (( Week_of_year__c  - 1) * 7) - MOD(DATE(YEAR(TODAY()), 1, 1) - DATE(1900, 1, 7), 7))
&amp; &quot; -&gt; &quot;
&amp; text (DATE(YEAR(TODAY()), 1, 1) + ((Week_of_year__c - 1) * 7) - MOD(DATE(YEAR(TODAY()), 1, 1) - DATE(1900, 1, 7), 7) + 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly frame</label>
    <type>Text</type>
</CustomField>