force-app/main/default/objects/RecruitmentPlanLine__c/validationRules/ClosingDateandMonthValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosingDateandMonthValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL( ClosingDate__c ) , ISPICKVAL( Month__c , &apos;&apos;) )</errorConditionFormula>
    <errorMessage>One of the two fields Closing Date or Month must be filled in!</errorMessage>
</ValidationRule>