force-app/main/default/objects/RecruitmentPlanLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Week_of_year__c</columns>
    <columns>Weekly_frame__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>